--- a/.github/workflows/termux-packages-build.yml
+++ b/.github/workflows/termux-packages-build.yml
@@ -1,1 +1,82 @@
+name: Termux Packages Build
 
+on:
+  push:
+    branches:
+      - master
+      - dev
+      - 'dev/**'
+    paths:
+      - 'packages/**'
+      - 'root-packages/**'
+      - 'x11-packages/**'
+  pull_request:
+    paths:
+      - 'packages/**'
+      - 'root-packages/**'
+      - 'x11-packages/**'
+  workflow_dispatch:
+    inputs:
+      packages:
+        description: "Space-separated package names for rebuild"
+        required: true
+
+permissions: {} # default minimal
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target_arch: [aarch64, arm, i686, x86_64]
+      fail-fast: false
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1000
+
+      - name: Setup environment
+        run: |
+          sudo apt update && sudo apt install -y \
+            git wget curl unzip python3 python3-pip ninja-build \
+            openjdk-17-jdk clang cmake build-essential pkg-config
+
+      - name: Gather package list
+        id: gather
+        env:
+          MANUAL_INPUT_PACKAGES: ${{ github.event.inputs.packages }}
+        run: |
+          mkdir -p ./debs ./artifacts
+          # workflow_dispatch input packages
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            read -a PACKAGES <<< "${MANUAL_INPUT_PACKAGES//$'\n'/ }"
+            echo "PACKAGES=${PACKAGES[*]}" >> $GITHUB_OUTPUT
+          else
+            echo "PACKAGES=" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Build packages in Docker
+        env:
+          PACKAGES: ${{ steps.gather.outputs.PACKAGES }}
+        run: |
+          git clone --depth 1 https://github.com/termux/termux-packages.git
+          cd termux-packages
+          if [ -n "$PACKAGES" ]; then
+            ./scripts/run-docker.sh ./build-package.sh -I -a ${{ matrix.target_arch }} $PACKAGES
+          else
+            ./scripts/run-docker.sh ./build-package.sh -I -a ${{ matrix.target_arch }} 
+          fi
+          mv output/*.deb ../
+
+      - name: Archive build artifacts
+        run: |
+          mkdir -p artifacts
+          mv *.deb artifacts/ || true
+          tar cf artifacts/debs-${{ matrix.target_arch }}.tar artifacts/
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: debs-${{ matrix.target_arch }}
+          path: artifacts/debs-${{ matrix.target_arch }}.tar
